# crackseg

./: .cursorrules  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  .taskmasterconfig.json  CHANGELOG.md  CONTRIBUTING.md  README-task-master.md  README.md  REORGANIZATION_COMPLETION_REPORT.md  REORGANIZATION_SUMMARY.md  TODOs.md  WORKFLOW_TRAINING.md  analisis_metricas_cfd.json  cbam_test_output.txt  codecov.yml  commitmsg.txt  comprehensive_failure_analysis.py  corrupted_files.txt  crackseg_packages_backup.txt  debug_output.txt  environment.yml  gui_test_results.txt  gui_unit_test_results.txt  link_check_summary.md  mkdocs.yml  mypy.ini  plan_verificacion_post_linting.md  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  taskmaster-list.md  test_config_system.py  test_failure_categorization.py  test_failure_categorization_report.json  test_priority_matrix_creator.py  (+3 more)
.cursor/: .cursorignore
.cursor/guides/: development-guide.mdc  general-context.mdc  glossary.mdc  project-structure.mdc  structural-guide.mdc  working-with-llms.mdc
.cursor/rules/: coding-preferences.mdc  cursor_rules.mdc  self_improve.mdc  taskmaster.mdc  tests_adapt_to_code.mdc  workflow-preferences.mdc
.github/workflows/: continuous-coverage-monitoring.yml  deploy-production.yml  docs-deploy.yml  e2e-testing.yml  guardrails.yml  gui-integration-tests.yml  performance-ci.yml  quality-gates.yml  security-scan.yml  test-e2e.yml  test-reporting.yml  weekly-quality-report.yml
.roo/rules/: coding-preferences.md  dev_workflow.md  git-standards.md  ml-research-standards.md  roo_rules.md  self_improve.md  taskmaster.md  testing-standards.md  workflow-preferences.md
archive/: README.md
archive/legacy_docs/: README.md  development-guide.mdc  project-structure.mdc  structural-guide.mdc
checkpoints/: checkpoint_best.pth  checkpoint_last.pth
comprehensive_failure_analysis/: comprehensive_failures_20250713_063216.json
comprehensive_reports/: comprehensive_dashboard.html  comprehensive_data.json  main_report.html  main_report.json
configs/: CONFIG_UPDATE_REPORT.md  README.md  base.yaml  basic_verification.yaml  config.yaml  simple_test.yaml
configs/archive/: config.yaml.backup  experiment_quick_test.yaml.backup
configs/data/: README.md  dataloader.yaml  default.yaml  transform.yaml
configs/evaluation/: default.yaml
configs/experiments/: README.md
configs/linting/: config.yaml
configs/model/: README.md  cnn_convlstm_unet.yaml  default.yaml  unet_aspp.yaml  unet_cnn.yaml  unet_mock.yaml  unet_swin_transfer.yaml
configs/testing/: performance_thresholds.yaml
configs/training/: README.md  default.yaml  trainer.yaml
data/: README.md
docker/: Dockerfile.test-runner  README-LOCAL-DEV.md  README.artifact-management.md  README.cross-browser-testing.md  README.md  env.local.template  env.test.template  env_manager.py  health_check_system.py  mobile-browser-config.json  setup-local-dev.sh
docker/scripts/: artifact-manager.sh  run-e2e-tests.sh  setup-local-dev.sh  system-monitor.sh
docs/: index.md
docs/analysis/: singleton_pattern_analysis.md
docs/api/: gui_components.md  gui_pages.md  gui_services.md  utilities.md  visualization_api.md
docs/designs/: loss_registry_design.md  loss_registry_design.md.reference_backup  migration_plan_and_milestones.md  risk_and_rollback_strategy.md  target_structure_v1.md
docs/experiments/: py_crackdb_swinv2_experiment.md
docs/guides/: CLEAN_INSTALLATION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  README.md  REORGANIZATION_COMPLETION_REPORT.md  SYSTEM_DEPENDENCIES.md  TECHNICAL_ARCHITECTURE.md  TEST_EXECUTION_PLAN.md  USAGE.md  WORKFLOW_TRAINING.md  checkpoint_format_specification.md  ci_cd_stakeholder_training.md  ci_cd_testing_integration.md  comprehensive_integration_test_reporting_guide.md  configuration_storage_specification.md  continuous_coverage_monitoring_guide.md  deployment_orchestration_api.md  deployment_orchestration_api.md.snippet_backup  experiment_data_saving_guide.md  experiment_tracker_usage.md  focal_dice_loss_usage.md  generalized_experiment_organization.md  gui_development_guidelines.md  gui_testing_best_practices.md  gui_testing_implementation_checklist.md  health_monitoring_guide.md.backup  health_monitoring_guide.md.edge_backup  health_monitoring_guide.md.snippet_backup  loss_registry_usage.md  migration_summary_graphviz_to_matplotlib.md  multi_target_deployment_guide.md  multi_target_deployment_guide.md.backup  multi_target_deployment_guide.md.edge_backup  multi_target_deployment_guide.md.snippet_backup  performance_benchmarking_system.md  prediction_analysis_guide.md  prediction_analysis_guide.md.snippet_backup  public_api_and_layering_rules.md  quality_gates_guide.md  (+2 more)
docs/plans/: articulo_cientifico_swinv2_cnn_aspp_unet.md  artifact_system_development_plan.md  (+2 more)
gui/: README.md  app.py  app_legacy.py  debug_page_rendering.py
infrastructure/: CONSOLIDATION_REPORT.md  CRITICAL_FIXES_REPORT.md  DOCUMENTATION_FIXES_REPORT.md  IMPACT_ANALYSIS_REPORT.md  INFRASTRUCTURE_REORGANIZATION_SUMMARY.md  MIGRATION_REPORT.md  PHASE_3_COMPLETION_REPORT.md  README.md
scripts/: README.md  SCRIPTS_UPDATE_REPORT.md  benchmark_aspp.py  benchmark_tests.py  check_test_files.py  coverage_check.sh  debug_artifacts.py  deployment_example.py  example_override.py  fix_all_imports.py  fix_gui_imports.py  model_inventory.py  model_summary.py  packaging_example.py  performance_maintenance.py  prd.txt  predict_image.py  run_tests_phased.py  task-complexity-report.json  temp_test_hydra.py  test_clean_installation.py  test_dataset_pipeline.py  test_swin_encoder.py  test_swin_transfer_learning.py  test_swin_unet.py  unet_diagram.py  validate_coverage.py  validate_test_quality.py  verify_python_compatibility.py  verify_system_dependencies.py
site/: 404.html  index.html  objects.inv
src/: README.md  __init__.py  __main__.py  evaluate.py  main.py
test_failure_reports/: test_failures_20250713_063004.json
tests/: README.md  __init__.py  conftest.py  debug_swin_params.py  requirements-testing.txt
(+3104 files in other folders)
